crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_format_document__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "insert_spaces": true,
    "tab_size": 4,
    "uri": "<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
  },
  "response": [
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 10,
      "line_start": 10,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 11,
      "line_start": 11,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 13,
      "line_start": 13,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 14,
      "line_start": 14,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 15,
      "line_start": 15,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 16,
      "line_start": 16,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 17,
      "line_start": 17,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 18,
      "line_start": 18,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 20,
      "line_start": 20,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 21,
      "line_start": 21,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 33,
      "line_start": 33,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 35,
      "line_start": 35,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 4,
      "line_start": 4,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 40,
      "line_start": 40,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 42,
      "line_start": 42,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 48,
      "line_start": 48,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 5,
      "line_start": 5,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 50,
      "line_start": 50,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 53,
      "line_start": 53,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 55,
      "line_start": 55,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 58,
      "line_start": 58,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 60,
      "line_start": 60,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 63,
      "line_start": 63,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 65,
      "line_start": 65,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 67,
      "line_start": 67,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 69,
      "line_start": 69,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 7,
      "line_start": 7,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 71,
      "line_start": 71,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 73,
      "line_start": 73,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 74,
      "line_start": 74,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 79,
      "line_start": 79,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 8,
      "line_start": 8,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 9,
      "line_start": 9,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 22,
      "line_start": 22,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 24,
      "line_start": 24,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 25,
      "line_start": 25,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 26,
      "line_start": 26,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 27,
      "line_start": 27,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 28,
      "line_start": 28,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 29,
      "line_start": 29,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 30,
      "line_start": 30,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 32,
      "line_start": 32,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 36,
      "line_start": 36,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 38,
      "line_start": 38,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 39,
      "line_start": 39,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 43,
      "line_start": 43,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 45,
      "line_start": 45,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 46,
      "line_start": 46,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 47,
      "line_start": 47,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 51,
      "line_start": 51,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 52,
      "line_start": 52,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 56,
      "line_start": 56,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 57,
      "line_start": 57,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 61,
      "line_start": 61,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 62,
      "line_start": 62,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 66,
      "line_start": 66,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 70,
      "line_start": 70,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 75,
      "line_start": 75,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 76,
      "line_start": 76,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 77,
      "line_start": 77,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 78,
      "line_start": 78,
      "new_text": ""
    }
  ]
}
