crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_format_document__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "insert_spaces": true,
    "tab_size": 4,
    "uri": "<BOOK>/examples/coffee-machine/views.sysml"
  },
  "response": [
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 109,
      "line_start": 109,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 110,
      "line_start": 110,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 111,
      "line_start": 111,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 39,
      "line_start": 39,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 40,
      "line_start": 40,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 46,
      "line_start": 46,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 47,
      "line_start": 47,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 53,
      "line_start": 53,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 54,
      "line_start": 54,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 100,
      "line_start": 100,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 102,
      "line_start": 102,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 103,
      "line_start": 103,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 104,
      "line_start": 104,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 105,
      "line_start": 105,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 106,
      "line_start": 106,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 112,
      "line_start": 112,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 114,
      "line_start": 114,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 118,
      "line_start": 118,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 120,
      "line_start": 120,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 121,
      "line_start": 121,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 122,
      "line_start": 122,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 124,
      "line_start": 124,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 126,
      "line_start": 126,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 128,
      "line_start": 128,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 130,
      "line_start": 130,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 131,
      "line_start": 131,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 132,
      "line_start": 132,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 133,
      "line_start": 133,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 134,
      "line_start": 134,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 136,
      "line_start": 136,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 16,
      "line_start": 16,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 17,
      "line_start": 17,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 18,
      "line_start": 18,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 19,
      "line_start": 19,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 20,
      "line_start": 20,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 22,
      "line_start": 22,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 23,
      "line_start": 23,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 24,
      "line_start": 24,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 25,
      "line_start": 25,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 27,
      "line_start": 27,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 28,
      "line_start": 28,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 29,
      "line_start": 29,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 31,
      "line_start": 31,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 32,
      "line_start": 32,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 33,
      "line_start": 33,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 34,
      "line_start": 34,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 36,
      "line_start": 36,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 41,
      "line_start": 41,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 43,
      "line_start": 43,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 48,
      "line_start": 48,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 50,
      "line_start": 50,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 55,
      "line_start": 55,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 57,
      "line_start": 57,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 58,
      "line_start": 58,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 59,
      "line_start": 59,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 60,
      "line_start": 60,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 62,
      "line_start": 62,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 63,
      "line_start": 63,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 65,
      "line_start": 65,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 66,
      "line_start": 66,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 67,
      "line_start": 67,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 68,
      "line_start": 68,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 69,
      "line_start": 69,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 70,
      "line_start": 70,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 72,
      "line_start": 72,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 73,
      "line_start": 73,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 74,
      "line_start": 74,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 77,
      "line_start": 77,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 79,
      "line_start": 79,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 82,
      "line_start": 82,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 84,
      "line_start": 84,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 85,
      "line_start": 85,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 86,
      "line_start": 86,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 87,
      "line_start": 87,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 88,
      "line_start": 88,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 95,
      "line_start": 95,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 97,
      "line_start": 97,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 107,
      "line_start": 107,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 108,
      "line_start": 108,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 115,
      "line_start": 115,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 116,
      "line_start": 116,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 117,
      "line_start": 117,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 123,
      "line_start": 123,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 127,
      "line_start": 127,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 135,
      "line_start": 135,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 37,
      "line_start": 37,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 38,
      "line_start": 38,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 44,
      "line_start": 44,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 45,
      "line_start": 45,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 51,
      "line_start": 51,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 52,
      "line_start": 52,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 75,
      "line_start": 75,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 76,
      "line_start": 76,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 80,
      "line_start": 80,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 81,
      "line_start": 81,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 89,
      "line_start": 89,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 90,
      "line_start": 90,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 91,
      "line_start": 91,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 92,
      "line_start": 92,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 93,
      "line_start": 93,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 94,
      "line_start": 94,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 98,
      "line_start": 98,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 99,
      "line_start": 99,
      "new_text": ""
    }
  ]
}
