crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_format_document__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "insert_spaces": true,
    "tab_size": 4,
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
  },
  "response": [
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 101,
      "line_start": 101,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 103,
      "line_start": 103,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 104,
      "line_start": 104,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 111,
      "line_start": 111,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 112,
      "line_start": 112,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 116,
      "line_start": 116,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 118,
      "line_start": 118,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 119,
      "line_start": 119,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 121,
      "line_start": 121,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 81,
      "line_start": 81,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 82,
      "line_start": 82,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 84,
      "line_start": 84,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 85,
      "line_start": 85,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 89,
      "line_start": 89,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 90,
      "line_start": 90,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 93,
      "line_start": 93,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 95,
      "line_start": 95,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 96,
      "line_start": 96,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 98,
      "line_start": 98,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 99,
      "line_start": 99,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 100,
      "line_start": 100,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 105,
      "line_start": 105,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 106,
      "line_start": 106,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 107,
      "line_start": 107,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 108,
      "line_start": 108,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 113,
      "line_start": 113,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 120,
      "line_start": 120,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 83,
      "line_start": 83,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 86,
      "line_start": 86,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 91,
      "line_start": 91,
      "new_text": ""
    },
    {
      "col_end": 16,
      "col_start": 0,
      "line_end": 97,
      "line_start": 97,
      "new_text": ""
    },
    {
      "col_end": 20,
      "col_start": 0,
      "line_end": 109,
      "line_start": 109,
      "new_text": ""
    },
    {
      "col_end": 20,
      "col_start": 0,
      "line_end": 114,
      "line_start": 114,
      "new_text": ""
    },
    {
      "col_end": 20,
      "col_start": 0,
      "line_end": 87,
      "line_start": 87,
      "new_text": ""
    },
    {
      "col_end": 20,
      "col_start": 0,
      "line_end": 88,
      "line_start": 88,
      "new_text": ""
    },
    {
      "col_end": 20,
      "col_start": 0,
      "line_end": 92,
      "line_start": 92,
      "new_text": ""
    },
    {
      "col_end": 24,
      "col_start": 0,
      "line_end": 110,
      "line_start": 110,
      "new_text": ""
    },
    {
      "col_end": 24,
      "col_start": 0,
      "line_end": 115,
      "line_start": 115,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 1,
      "line_start": 1,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 123,
      "line_start": 123,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 35,
      "line_start": 35,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 36,
      "line_start": 36,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 37,
      "line_start": 37,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 38,
      "line_start": 38,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 40,
      "line_start": 40,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 10,
      "line_start": 10,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 11,
      "line_start": 11,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 12,
      "line_start": 12,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 13,
      "line_start": 13,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 14,
      "line_start": 14,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 15,
      "line_start": 15,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 16,
      "line_start": 16,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 17,
      "line_start": 17,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 18,
      "line_start": 18,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 19,
      "line_start": 19,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 2,
      "line_start": 2,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 20,
      "line_start": 20,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 21,
      "line_start": 21,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 22,
      "line_start": 22,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 23,
      "line_start": 23,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 24,
      "line_start": 24,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 25,
      "line_start": 25,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 26,
      "line_start": 26,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 27,
      "line_start": 27,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 28,
      "line_start": 28,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 29,
      "line_start": 29,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 3,
      "line_start": 3,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 30,
      "line_start": 30,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 31,
      "line_start": 31,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 32,
      "line_start": 32,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 33,
      "line_start": 33,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 4,
      "line_start": 4,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 5,
      "line_start": 5,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 6,
      "line_start": 6,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 7,
      "line_start": 7,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 8,
      "line_start": 8,
      "new_text": ""
    },
    {
      "col_end": 5,
      "col_start": 0,
      "line_end": 9,
      "line_start": 9,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 122,
      "line_start": 122,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 42,
      "line_start": 42,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 43,
      "line_start": 43,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 45,
      "line_start": 45,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 46,
      "line_start": 46,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 47,
      "line_start": 47,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 48,
      "line_start": 48,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 49,
      "line_start": 49,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 50,
      "line_start": 50,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 51,
      "line_start": 51,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 52,
      "line_start": 52,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 54,
      "line_start": 54,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 55,
      "line_start": 55,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 56,
      "line_start": 56,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 57,
      "line_start": 57,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 59,
      "line_start": 59,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 60,
      "line_start": 60,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 61,
      "line_start": 61,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 62,
      "line_start": 62,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 63,
      "line_start": 63,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 64,
      "line_start": 64,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 65,
      "line_start": 65,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 67,
      "line_start": 67,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 68,
      "line_start": 68,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 69,
      "line_start": 69,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 70,
      "line_start": 70,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 71,
      "line_start": 71,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 72,
      "line_start": 72,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 73,
      "line_start": 73,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 74,
      "line_start": 74,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 75,
      "line_start": 75,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 76,
      "line_start": 76,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 78,
      "line_start": 78,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 79,
      "line_start": 79,
      "new_text": ""
    }
  ]
}
